# ChangeLog for dev-perl/gtk-perl-glade
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk-perl-glade/ChangeLog,v 1.11 2003/12/22 21:54:29 rac Exp $

*gtk-perl-glade-0.7008-r1 (22 Dec 2003)

  22 Dec 2003; <rac@gentoo.org> gtk-perl-glade-0.7008-r1.ebuild:
  Install into vendor directories, address bug 30615

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gtk-perl-glade-0.7008 (29 Nov 2002)

  29 Nov 2002; Michael Cummings <mcummings@gentoo.org> 
  gtk-perl-glade-0.7008.ebuild:

  Until I can get this out of here and merged completely with the mainline 
  of gtk-perl, here's the latest stable version, tested.


  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :

  forced version bump to install into correct locations
  
# ChangeLog for dev-perl/gtk-perl-glade

*gtk-perl-glade-0.7004-r3 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*gtk-perl-glade-0.7004-r2 (6 May 2002)

  1 Aug 2002; Calum Selkirk <cselkirk@gentoo.org>
  gtk-perl-glade-0.7004-r2.ebuild :

  Added ppc to KEYWORDS.

  6 May 2002; Seemant Kulleen <seemant@gentoo.org>
  gtk-perl-glade-0.7004-r2.ebuild :

  eclassed.

*gtk-perl-glade-0.7004-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.