@@ -1,7 +1,7 @@
 MD5 2207a1234a28bbbb2498a67256a440a9 gtk-perl-glade-0.7004-r2.ebuild 792
 MD5 4f55d2f904b4702e53924b4101b378f2 gtk-perl-glade-0.7008.ebuild 1133
-MD5 8e6b6bd65be4e9424e0533723b7ec81d gtk-perl-glade-0.7008-r1.ebuild 1080
-MD5 2875c30c39c278a1f7bd4ea34dbc8571 ChangeLog 1747
+MD5 f5b65c6a62dc1a26eec91fba2e555158 gtk-perl-glade-0.7008-r1.ebuild 1084
+MD5 73acea6a93547d522c7c7a1f9426f0aa ChangeLog 1841
 MD5 ae253fd4b0997629c0ad071922117baf gtk-perl-glade-0.7004-r3.ebuild 791
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 MD5 1d2297d4631bc29f6d6be65b6a723064 files/digest-gtk-perl-glade-0.7004-r2 67
