@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/gtk-perl-glade
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk-perl-glade/ChangeLog,v 1.11 2003/12/22 21:54:29 rac Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk-perl-glade/ChangeLog,v 1.12 2004/01/23 13:54:28 gustavoz Exp $
+
+  23 Jan 2004; <gustavoz@gentoo.org> gtk-perl-glade-0.7008-r1.ebuild:
+  stable on sparc
 
 *gtk-perl-glade-0.7008-r1 (22 Dec 2003)
 
